--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ctci-twig",
+  "name": "apie_wpbasetwig",
   "version": "0.0.1",
   "description": "Twig Based theme",
   "main": "index.js",
