--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
-    "pdfjs": "^2.3.9",
+    "pdfjs-dist": "^2.4.456",
     "popper": "^1.0.1"
   }
 }
