--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-zip": "^5.0.2",
+    "node-bash-title": "0.0.2",
     "node-sass": "^4.14.0",
     "rtlcss": "^2.5.0",
     "stylelint-config-twbs-bootstrap": "^2.0.3",
